annotated readme for 2.1, fixed scrollbar overlay bug, cleaned up info pane

--- a/Resources/main.css
+++ b/Resources/main.css
@@ -1,17 +1,13 @@
-
-
-
-
 div#topnav {
-display: block !important;
-height: 72px !important;
+    display: block !important;
+    height: 72px !important;
 }
 
 /*#main {
     top: 33px !important;
 }*/
 
-#brandingBar, #skinTab, #promobox, .platformPromo, .contextual_help_container, div.tip_container, .cd_icon, div#videoPlayerContainer, #ad_container, #footer, div.contents > div.info, div.welcome_content > p.firstLine, div.btn_content > div.signin {
+#brandingBar, #skinTab, #promobox, .platformPromo, .contextual_help_container, div.tip_container, .cd_icon, div#videoPlayerContainer, #ad_container, #footer, div.welcome_content > p.firstLine, div.btn_content > div.signin {
     display:none !important;
 }
 
@@ -88,10 +84,6 @@ div.skinContainer {
     height: 578px !important;
 }
 
-#trackInfo {
-    min-height: 0px !important;
-}
-
 /*div.info > div {
     float: right !important;
     width: 265px !important;
@@ -131,35 +123,63 @@ div#shuffleIcon {
     width: 174px !important;
 }
 
-/* ADJUSTING ALBUM ART SIZE */
-/*div#currentSlideArrow {
-margin-right: 218px !important; 
+/* ADJUSTING INFO PANE */
+div.contents > div.info > div:not(.buttons), div.contents > div.info > img.thumb {
+    display: none !important;
 }
+div#trackInfo {
+    padding: 6px 5px 6px 5px !important;
+    min-height: 25px !important;
+}
+div.contents > div.info > div.buttons {
+    width:130px !important;
+}
+div.contents > div.info > div.buttons > div {
+    display: inline-block !important;
+    padding:0 !important;
+}
+
+/* ADJUSTING ALBUM ART SIZE */
+
+/*#trackInfo {
+    min-height: 0px !important;
+}
+ 
+div#currentSlideArrow {
+ margin-right: 218px !important; 
+}
+ 
 div.slidesBackground > div {
     height: 457px !important;
 }
+ 
 div.slidesForeground > div.slcides {
     height: 450px !important;
     margin-top: -481px !important;
 }
+ 
 div.slides > div.stationSlides {
     width: 2859px !important;
     left: -1800px !important;
 }
+ 
 div.stationSlides > div.slide {
     height: 450px !important;
     width: 450px !important;
 }
+ 
 div.stationSlides > div.slide > img {
     height: 135px !important;
     width: 360px !important;
     right: 509px !important;
 }
+ 
 div.stationSlides > div.slide > div > img {
     width: 450px !important;
     height: 450px !important;
 }
-div#trackInfo {
+ 
+div#trackInfo, div.contents > div.info {
     display: none !important;
 }
 */
